[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 构建http server
axum = "0.6.18"
# rust异步运行时
tokio = {version = "1.28.1", features = ["full"]}
# 处理json
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
futures = "0.3.28"
